[package]
name = "sniperc"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.25.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["time"] }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
dotenv = "0.15.0"
